[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/tic_tac_toe/TicTacToeElement.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/TicTacToe.gd" type="Script" id=2]

[sub_resource type="StyleBoxLine" id=4]
thickness = 2
vertical = true

[sub_resource type="Theme" id=5]
VSeparator/styles/separator = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[node name="TicTacToe" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -100.0
margin_right = 176.0
margin_bottom = 124.0
rect_min_size = Vector2( 364, 224 )
theme = SubResource( 5 )
window_title = "Tic-Tac-Toe"
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HB" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PC" type="PanelContainer" parent="HB"]
margin_left = 16.0
margin_top = 16.0
margin_right = 208.0
margin_bottom = 208.0
rect_min_size = Vector2( 192, 192 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 1 )

[node name="GridContainer" type="GridContainer" parent="HB/PC"]
margin_right = 192.0
margin_bottom = 192.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 3

[node name="TicTacToeElement" parent="HB/PC/GridContainer" instance=ExtResource( 1 )]

[node name="TicTacToeElement2" parent="HB/PC/GridContainer" instance=ExtResource( 1 )]
margin_left = 64.0
margin_right = 128.0

[node name="TicTacToeElement3" parent="HB/PC/GridContainer" instance=ExtResource( 1 )]
margin_left = 128.0
margin_right = 192.0

[node name="TicTacToeElement4" parent="HB/PC/GridContainer" instance=ExtResource( 1 )]
margin_top = 64.0
margin_bottom = 128.0

[node name="TicTacToeElement5" parent="HB/PC/GridContainer" instance=ExtResource( 1 )]
margin_left = 64.0
margin_top = 64.0
margin_right = 128.0
margin_bottom = 128.0

[node name="TicTacToeElement6" parent="HB/PC/GridContainer" instance=ExtResource( 1 )]
margin_left = 128.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = 128.0

[node name="TicTacToeElement7" parent="HB/PC/GridContainer" instance=ExtResource( 1 )]
margin_top = 128.0
margin_bottom = 192.0

[node name="TicTacToeElement8" parent="HB/PC/GridContainer" instance=ExtResource( 1 )]
margin_left = 64.0
margin_top = 128.0
margin_right = 128.0
margin_bottom = 192.0

[node name="TicTacToeElement9" parent="HB/PC/GridContainer" instance=ExtResource( 1 )]
margin_left = 128.0
margin_top = 128.0
margin_right = 192.0
margin_bottom = 192.0

[node name="VB" type="VBoxContainer" parent="HB"]
margin_left = 220.0
margin_right = 348.0
margin_bottom = 224.0
custom_constants/separation = 24
alignment = 1

[node name="Control" type="Control" parent="HB/VB"]
margin_top = 90.0
margin_right = 128.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="HB/VB/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "You win!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="HB/VB"]
margin_top = 114.0
margin_right = 128.0
margin_bottom = 134.0
rect_min_size = Vector2( 128, 0 )
size_flags_horizontal = 4
text = "Restart"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
